--- a/KhawLang/KhawLang/Views/Meal/Index.cshtml
+++ b/KhawLang/KhawLang/Views/Meal/Index.cshtml
@@ -1,75 +1,67 @@
-﻿@model IEnumerable<KhawLang.Models.Meal>
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<IGrouping<Meal, MealTag>>
+
 @{
     ViewData["Title"] = "Product";
 }
 
-
 <h1>Our Product</h1>
 
-<p>
-    <button type="button" class="btn btn-outline-primary"><a asp-action="Create">Create New</a></button>
-</p>
+<tr>
+    <td>
+        <button type="button" class="btn btn-outline-primary"><a asp-action="IndexMeal">All Meal</a></button>
+    </td>
+    <td>
+        <button type="button" class="btn btn-outline-primary"><a asp-action="Create">New Meal</a></button>
+    </td>
+    <td>
+        <button type="button" class="btn btn-outline-primary"><a asp-action="IndexTag">Tag</a></button>
+    </td>
+</tr>
+
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Amount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th>
-                Tags
-            </th>
-            <th></th>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Amount</th>
+            <th>Description</th>
+            <th>Image</th>
+            <th>Tags</th>
+            <th>Action</th>
         </tr>
     </thead>
-    <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <img src="@Url.Content(item.Image)" width="150px" height="150px" style="object-fit: cover ;border-radius : 10px"/>
-            </td>
-            <td>
-                @if (item.Tags != null) {
-                    foreach (var tag in item.Tags) {
-                        <span class="badge badge-primary">@tag</span>
+        <tbody>
+        @foreach (var mealGroup in Model)
+        {
+            var meal = mealGroup.Key;
+            var tags = mealGroup.Select(mt => mt.Tag);
+
+            <tr>
+                <td>@meal.Name</td>
+                <td>@meal.Price</td>
+                <td>@meal.Amount</td>
+                <td>@meal.Description</td>
+                <td>
+                    <img src="@Url.Content(meal.Image)" width="150px" height="150px" style="object-fit: cover; border-radius: 10px" />
+                </td>
+                <td>
+                    @if (tags != null && tags.Any())
+                    {
+                        foreach (var tag in tags)
+                        {
+                            <span>@tag.Name</span>
+                        }
                     }
-                }
-                else {
-                    <span>No tags available</span><br>
-                }
-                @Html.DisplayFor(modelItem => item.TagsInput)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MealId">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.MealId">Delete</a>
-            </td>
-        </tr>
-}
+                    else
+                    {
+                        <span>No tags available</span>
+                    }
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@meal.MealId">Edit</a> |
+                    <a asp-action="Delete" asp-route-id="@meal.MealId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
